--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-dev libxkbcommon-x11-0 libxcb-cursor0 libxcb-icccm4-0 libxcb-image0 libxcb-keysyms1-0 libxcb-render-util0 libxcb-shape0 libxcb-xinerama0
+          # Using wildcards (*) handles the naming changes in Ubuntu 24.04
+          sudo apt-get install -y libgl1-mesa-dev libxkbcommon-x11-0 libxcb-cursor0 libxcb-icccm4* libxcb-image0 libxcb-keysyms* libxcb-render-util0 libxcb-shape0 libxcb-xinerama0 libxcb-xkb1
 
       - name: Set up Windows Path
         if: matrix.os == 'windows-latest'
@@ -50,7 +51,6 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           cd build
-          # windeployqt copies necessary Qt DLLs into the folder
           windeployqt XpressiveTools.exe
 
       - name: Upload Artifacts
