--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          # Using wildcards (*) handles the naming changes in Ubuntu 24.04
           sudo apt-get install -y libgl1-mesa-dev libxkbcommon-x11-0 libxcb-cursor0 libxcb-icccm4* libxcb-image0 libxcb-keysyms* libxcb-render-util0 libxcb-shape0 libxcb-xinerama0 libxcb-xkb1
 
       - name: Set up Windows Path
@@ -49,9 +48,15 @@ jobs:
 
       - name: Windows Deployment (Bundle DLLs)
         if: matrix.os == 'windows-latest'
+        shell: bash
         run: |
           cd build
+          # 1. Run standard Qt deploy
           windeployqt XpressiveTools.exe
+          # 2. Manually copy MinGW system libraries (The missing piece)
+          cp /c/msys64/mingw64/bin/libgcc_s_seh-1.dll .
+          cp /c/msys64/mingw64/bin/libstdc++-6.dll .
+          cp /c/msys64/mingw64/bin/libwinpthread-1.dll .
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
