--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,14 +70,15 @@ jobs:
         wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
         chmod a+x linuxdeployqt-continuous-x86_64.AppImage
         
-        # 2. Create required metadata
-        echo -e "[Desktop Entry]\nType=Application\nName=WaveConv\nExec=WaveConv\nIcon=icon\nCategories=Utility;" > WaveConv.desktop
-        touch icon.png
+        # 2. Create the metadata files INSIDE the build directory
+        # The Categories=Utility; line is critical to satisfy the error you saw
+        echo -e "[Desktop Entry]\nType=Application\nName=WaveConv\nExec=WaveConv\nIcon=icon\nCategories=Utility;" > build/WaveConv.desktop
+        touch build/icon.png
         
-        # 3. Run deployment with error ignoring enabled
+        # 3. Run deployment
         export OUTPUT=WaveConv-x86_64.AppImage
         export IGNORE_LINUXDEPLOYQT_ERRORS=1
-        ./linuxdeployqt-continuous-x86_64.AppImage build/WaveConv -appimage
+        ./linuxdeployqt-continuous-x86_64.AppImage build/WaveConv.desktop -appimage
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
