--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets Multimedia)
+find_package(Qt6 REQUIRED COMPONENTS Widgets Multimedia Xml)
 
 add_executable(WaveConv
     MACOSX_BUNDLE 
@@ -25,6 +25,7 @@ add_executable(WaveConv
 target_link_libraries(WaveConv PRIVATE
     Qt6::Widgets
     Qt6::Multimedia
+    Qt6::Xml
 )
 
 if(APPLE)
